--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,13 @@
 .env.production.local
 
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-logs
-*.log
+lerna-debug.log*
+.pnpm-debug.log*
 
 # OS generated files
 .DS_Store
